# bridge-os

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
crates/adapters/: Cargo.toml
crates/audit_log/: Cargo.toml
crates/browser_voice_adapter/: Cargo.toml
crates/conversation_runtime/: Cargo.toml
crates/mock_adapters/: Cargo.toml
crates/orchestration_runtime/: Cargo.toml
crates/orchestration_runtime/src/: executor.rs  lib.rs  models.rs  parser.rs  planner.rs  projection.rs  stabilizer.rs
crates/policy_engine/: Cargo.toml
crates/task_models/: Cargo.toml
docs/: PRD.md  TECH_STACK.md
docs/design/: DESIGN.md  INFO_ARCHITECTURE.md  RESEARCH.md  UX_DESIGN.md  UX_DESIGN_APPENDIX.md  preview-dark.html  preview.html
docs/marketing/: BridgeOS_brand_copy_english_only.md
docs/tickets/: 001-project-scaffolding.md  002-design-tokens-and-theme.md  003-corridor-layout-and-surfaces.md  004-test-checkpoint-0-foundation.md  005-status-capsule.md  006-voice-bar.md  007-intent-board.md  008-draft-plan.md  009-task-panel-shell.md  010-test-checkpoint-1-core-ui.md  011-timeline-and-step-cards.md  012-approval-card.md  013-completion-summary.md  014-test-checkpoint-2-execution-ui.md  015-core-state-machines.md  016-state-store-and-events.md  017-wire-ui-to-state.md  018-test-checkpoint-3-interactive-prototype.md  019-rust-project-structure.md  020-tauri-ipc-bridge.md  021-conversation-runtime.md  022-policy-engine.md  023-test-checkpoint-4-rust-runtime.md  (+14 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: ipc.rs  lib.rs  main.rs
tests/: demo-page.test.tsx  organize-downloads-sequence.test.ts  state-machines.test.ts  state-store.test.ts  task-panel.test.tsx  tauri-bridge.test.tsx  tauri-speech-recognition.test.tsx  tauri-speech-synthesis.test.tsx
(+51 files in other folders)
