[package]
name = "bridgeos"
version = "0.1.0"
description = "BridgeOS - Star Trek inspired AI interface"
authors = ["you"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bridgeos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Compile with mock adapters (default for macOS dev).
# When real Linux adapters land, add a `linux-adapters` feature here
# and make mock_adapters an optional dep gated on this feature.
default = ["mock-adapters"]
mock-adapters = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
adapters = { path = "../crates/adapters" }
audit_log = { path = "../crates/audit_log" }
conversation_runtime = { path = "../crates/conversation_runtime" }
mock_adapters = { path = "../crates/mock_adapters" }
orchestration_runtime = { path = "../crates/orchestration_runtime" }
policy_engine = { path = "../crates/policy_engine" }
task_models = { path = "../crates/task_models" }
futures = "0.3"

[dev-dependencies]
